<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DelRio Julien</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="progression">Progression :</string>
    <string name="state">State :</string>
    <string name="stopped">Stopped</string>
    <string name="inprogress">In progress</string>
    <string name="start">Start</string>
    <string name="notclickedfornow">Not clicked for now</string>
    <string name="zeropercent">0 %</string>

</resources>